.airflow/logs/dag_id=data_extraction_to_snowflake/run_id=manual__2025-07-14T22:59:30.835976+00:00/task_id=processing_tables/map_index=4/attempt=1.log
[2025-07-14T22:59:32.885+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T22:59:30.835976+00:00 map_index=4 [queued]>
[2025-07-14T22:59:32.892+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T22:59:30.835976+00:00 map_index=4 [queued]>
[2025-07-14T22:59:32.892+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2025-07-14T22:59:32.902+0000] {taskinstance.py:2191} INFO - Executing <Mapped(_PythonDecoratedOperator): processing_tables> on 2025-07-14 22:59:30.835976+00:00
[2025-07-14T22:59:32.909+0000] {standard_task_runner.py:60} INFO - Started process 130 to run task
[2025-07-14T22:59:32.913+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'data_extraction_to_snowflake', 'processing_tables', 'manual__2025-07-14T22:59:30.835976+00:00', '--job-id', '83', '--raw', '--subdir', 'DAGS_FOLDER/etl_transfer_to_stage.py', '--cfg-path', '/tmp/tmpzxi9i7nh', '--map-index', '4']
[2025-07-14T22:59:32.919+0000] {standard_task_runner.py:88} INFO - Job 83: Subtask processing_tables
[2025-07-14T22:59:32.974+0000] {task_command.py:423} INFO - Running <TaskInstance: data_extraction_to_snowflake.processing_tables manual__2025-07-14T22:59:30.835976+00:00 map_index=4 [running]> on host ba480c39b9ec
[2025-07-14T22:59:33.058+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data_extraction_to_snowflake' AIRFLOW_CTX_TASK_ID='processing_tables' AIRFLOW_CTX_EXECUTION_DATE='2025-07-14T22:59:30.835976+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-07-14T22:59:30.835976+00:00'
[2025-07-14T22:59:33.070+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T22:59:33.093+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T22:59:33.137+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2025-07-14T22:59:33.152+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/decorators/base.py", line 241, in execute
    return_value = super().execute(context)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_transfer_to_stage.py", line 103, in processing_each_table
    cursor.execute(insert_query,row)
psycopg2.errors.SyntaxError: syntax error at or near "id"
LINE 1: INSERT INTO "DW_HR_NIVES".employee_info id, employee_id, nam...
                                                ^

[2025-07-14T22:59:33.163+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=data_extraction_to_snowflake, task_id=processing_tables, map_index=4, execution_date=20250714T225930, start_date=20250714T225932, end_date=20250714T225933
[2025-07-14T22:59:33.174+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 83 for task processing_tables (syntax error at or near "id"
LINE 1: INSERT INTO "DW_HR_NIVES".employee_info id, employee_id, nam...
                                                ^
; 130)
[2025-07-14T22:59:33.220+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-14T22:59:33.261+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
